<resources>
    <string name="app_name">HireHub</string>
    <string name="splash_logo">Logo Splash</string>
    <string name="button_employee_sign_in">Masuk Sebagai Karyawan</string>
    <string name="button_company_sign_in">Masuk Sebagai Perusahaan</string>
    <string name="already_have_an_account">Sudah Punya Akun?</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="sign_up_applicant">Daftar Sebagai Pencari Kerja</string>
    <string name="sign_up_company">Daftar Sebagai Perusahaan</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Belum Punya Akun?</string>
    <string name="your_password">Password</string>
    <string name="title_activity_home_applicant">Halaman Utama Pencari Kerja</string>
    <string name="selected_file_is_above_maximum_allowed_size">File yang dipilih terlalu besar, pilih file kurang dari 1 MB.</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dasbor</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="chat">Obrolan</string>
    <string name="history">Histori</string>
    <string name="profile">Profil</string>
    <string name="decline">Tolak</string>
    <string name="logout">Keluar dari Akun</string>
    <string name="settings">Pengaturan</string>
    <string name="logo_hirehub">Logo HireHub</string>
    <string name="hello_inkubasi_hirehub_indonesia">Halo Inkubasi, HireHub Indonesia!</string>
    <string name="button_edit">Ubah</string>
    <string name="button_settings">Pengaturan</string>
    <string name="messages">Pesan</string>
    <string name="offering_history">Sejarah Penawaran</string>
    <string name="employee_sign_in">Masuk Sebagai Karyawan</string>
    <string name="company_sign_in">Masuk Sebagai Perusahaan</string>
    <string name="these_companies_are_interested_in_extending_a_job_offer_to_you">Perusahaan-perusahaan ini tertarik untuk memberikan tawaran pekerjaan padamu</string>
    <string name="success">Sukses</string>
    <string name="reject">Tolak</string>
    <string name="mobile_development_expert">Ahli Pengembangan Mobile</string>
    <string name="name">Nama</string>
    <string name="about_me">Tentang Saya</string>
    <string name="curriculum_vitae">Curriculum Vitae</string>
    <string name="search">Cari</string>
    <string name="search_hrd">Cari HRD</string>
    <string name="offeringhistory">Proses Penawaran</string>
    <string name="waiting_confirmation">Menunggu Konfirmasi</string>
    <string name="recent_offering">Penawaran Terbaru</string>
    <string name="welcome_to_hirehub">Selamat datang di HireHub!</string>
    <string name="discover_">Temukan</string>
    <string name="_employee">Pencari Kerja 🔥</string>
    <string name="search_cv_or_position">Pengembang Mobile</string>
    <string name="google_inc">Google Inc</string>
    <string name="about_company">Tentang Perusahaan</string>
    <string name="this_is_the_description_text_about_company">Ini adalah teks deskripsi tentang perusahaan</string>
    <string name="location">Lokasi</string>
    <string name="jakarta">Jakarta</string>
    <string name="employee_size">Jumlah Karyawan</string>
    <string name="_131_231">131.231</string>
    <string name="description">Deskripsi: </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="name_title">Nama</string>
    <string name="age">Usia</string>
    <string name="skill">Keahlian</string>
    <string name="email_title">Email</string>
    <string name="date_title">Tanggal Lahir </string>
    <string name="language_title">Bahasa </string>
    <string name="education_title">Pendidikan </string>
    <string name="degree_title">Gelar</string>
    <string name="phone_title">Nomor Telepon</string>
    <string name="location_title">Lokasi </string>
    <string name="resume_or_cv">Resume atau CV</string>
    <string name="upload_your_cv_or_resume_and_use_it_when_you_apply_for_jobs">Unggah CV atau Resume dan gunakan saat kamu melamar pekerjaan</string>
    <string name="upload_a_pdf">Cari PDF</string>
    <string name="upload">Simpan</string>
    <string name="change_about_me">Ubah Tentang Saya</string>
    <string name="sample_name">Andelle Gianzra Basae</string>
    <string name="sample_email">andelle@gmail.com</string>
    <string name="sample_date">19 Maret 2002</string>
    <string name="sample_location">Palembang</string>
    <string name="minimum_salary">Gaji Minimum</string>
    <string name="sample_salary">13.000.000</string>
    <string name="education_institution">Institusi Pendidikan</string>
    <string name="sample_education">Universitas Sriwijaya</string>
    <string name="degree">Gelar</string>
    <string name="sample_degree">S1</string>
    <string name="mobile_phone">Nomor Telepon</string>
    <string name="phone_sample">0812.....</string>
    <string name="skills">Keahlian</string>
    <string name="language">Bahasa</string>
    <string name="sample_language">Indonesia</string>
    <string name="your_description">Deskripsimu</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="change_about_company">Ubah Tentang Perusahaan</string>
    <string name="change_about_applicant">Ubah Tentang Pencari Kerja</string>
    <string name="hello_blank_fragment">Halo fragmen kosong</string>
    <string name="tab_text_1">Tentang Saya</string>
    <string name="tab_text_2">Kontak</string>
    <string name="see_cv">Lihat CV</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="masih_belum_ada_company_yang_melirimu_ni">Masih belum ada perusahaan yang melirikmu nih..</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="belum_ada_data_profile">Belum ada data profil</string>
    <string name="continue_process">Lengkapi data profil</string>
    <string name="accept">Terima</string>
    <string name="enter">Lanjut</string>
    <string name="Email">Email</string>
    <string name="welcome_hirehub_sign_up">Selamat datang di HireHub! Silakan lengkapi data di bawah ini!</string>
    <string name="sign_in_applicant">Masuk Sebagai Pencari Kerja</string>
    <string name="welcome_option">Mau jadi pencari kerja atau temuin talent terbaik buat tim kamu? Pilih peranmu sekarang!🌟</string>
    <string name="welcome_hirehub">Selamat datang di HireHub! </string>
    <string name="sign_in_welcome">Silakan masuk dengan akun HireHub yang terdaftar.</string>
    <string name="applicant">Pengguna Pencari Kerja</string>
    <string name="applicant_desc">Kamu memiliki kesempatan untuk mendapatkan posisi pekerjaan yang ditawarkan</string>
    <string name="company">Pengguna Perusahaan</string>
    <string name="company_desc">Yang sedang mencari karyawan untuk mengisi posisi tersebut</string>
    <string name="upload_a_doc">Unggah PDF</string>
    <string name="empty_a_doc">PDF belum diunggah</string>
    <string name="upload_a_doc_complete">CV UserApplicant.Pdf</string>
    <string name="headOffice">Kantor Pusat</string>
    <string name="headOffice_hint">Jakarta Pusat, Indonesia</string>
    <string name="website">Situs Web</string>
    <string name="website_hint">https://www.google.com</string>
    <string name="industry">Industri</string>
    <string name="industry_hint">Produk Internet</string>
    <string name="employee_size_hint">100</string>
    <string name="please_sign_in_with_the_registered_account">Silakan masuk dengan akun perusahaan yang terdaftar</string>
    <string name="login_company">Yuk masuk sebagai perusahaan!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="login_applicant">Masuk Pencari Kerja</string>
    <string name="sample_skill">Problem Solving</string>
    <string name="add">Tambah</string>
    <string name="field">Bidang</string>
    <string name="sampel_field">Pengembang Mobile</string>
    <string name="no_message">Tidak Ada Pesan</string>
    <string name="no_message_desc">Saat ini kamu tidak memiliki pesan masuk, terima kasih</string>
    <string name="whoops">Ups!</string>
    <string name="pending">Menunggu</string>
    <string name="unfortunately_there_are_no_applicants_to_report_at_this_moment">Sayangnya, tidak ada pencari kerja yang dapat dilaporkan saat ini.</string>
    <string name="these_company_offer">Perusahaan-perusahaan ini tertarik untuk memberikan <font color="#5669FF"> tawaran pekerjaan padamu! </font> </string>
    <string name="offering">Penawaran</string>
    <string name="on_process">Proses</string>
    <string name="institution">Institusi</string>
    <string name="sample_instituion">Universitas Sriwijaya</string>
    <string name="hiring_process">Proses Perekrutan</string>
    <string name="hi">Hi!</string>
    <string name="sample_hiring_summary">Pencari kerja telah menerima tawaran kita dan kita akan mengirimkan informasi tentang budaya perusahaan, peran dan tanggung jawab mereka, dan detail penting lainnya saat kita melanjutkan proses perekrutan ini. Beri tahu kami jika ada pertanyaan atau kekhawatiran.</string>
    <string name="chat_employee">Obrolan dengan Pencari Kerja</string>
    <string name="hire">Rekrut</string>
    <string name="hei">Hei!</string>
    <string name="ayo_terus_mencari_dan_temukan_perusahaan_yang_cocok_denganmu_yaa_semoga_berhasill">Ayo terus mencari dan temukan perusahaan yang cocok denganmu yaa! Semoga berhasil!</string>
    <string name="belum_ada_penolakan">Kamu belum pernah mendapat penolakan nih!</string>
    <string name="belum_ada_waiting">Saat ini kita belum mendapat konfirmasi proses dari perusahaan nih</string>
    <string name="ayo_terus_mencari_kandidat_yang_cocok_dengan_perusahaanmu_yaa">Ayo terus mencari kandidat yang cocok dengan perusahaanmu yaa</string>
    <string name="belum_ada_waiting_company">Saat ini kita belum mendapat konfirmasi proses dari kandidat nih</string>
    <string name="belum_ada_penolakan_company">Kamu belum pernah mendapat penolakan dari kandidat</string>
    <string name="process">Proses</string>
    <string name="no_data_applicant">Pencari kerja belum mengisi data ini</string>
    <string name="no_cv_applicant">Pencari kerja belum mengisi CV</string>
    <string name="ajukan_penawaran">Ajukan Penawaran</string>
    <string name="description_create_offer">Setelah pencari kerja menerima tawaranmu, kamu dapat menggunakan fitur obrolan untuk melanjutkan proses wawancara</string>
    <string name="succed_create_offer">Berhasil membuat penawaran</string>
    <string name="failed_create_offer">Kamu sudah melakukan penawaran pada kandidat</string>
    <string name="offer_hire">Hire Applicant</string>
    <string name="offer_hire_desc">Dengan mengontrak calon karyawan, secara resmi mereka telah menjadi bagian dari timmu. Pastikan juga sudah berkomunikasi dengan mereka ya</string>
    <string name="offer_reject">Reject Applicant</string>
    <string name="silahkan_login_akun_yang_telah_terdaftar">Silakan masuk dengan akun yang telah terdaftar</string>
    <string name="consent_register">Dengan mendaftarkan akun, Anda menyetujui Syarat dan Ketentuan yang berlaku di Hirehub</string>
    <string name="yuk_daftarkan_perusahaanmu">Yuk! Daftarkan Perusahaanmu!</string>
    <string name="ayo_masuk_pencari_kerja">Ayo masuk, Pencari Kerja!</string>
</resources>