<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_default"
    android:padding="30dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:contentDescription="@string/logo_hirehub"
        android:src="@drawable/main_logo_square"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ayo_masuk_pencari_kerja"
        android:textColor="#3B4145"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_signin_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_login_akun_yang_telah_terdaftar"
        android:textColor="#3B4145"
        app:layout_constraintStart_toStartOf="@+id/signin_text"
        app:layout_constraintTop_toBottomOf="@+id/signin_text" />

    <TextView
        android:id="@+id/tv_signin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#3B4145"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signin_subtitle" />

    <EditText
        android:id="@+id/ad_username_signin"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:paddingRight="16dp"
        android:inputType="text|textNoSuggestions"
        android:importantForAutofill="no"
        app:cornerRadius="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_name" />

    <TextView
        android:id="@+id/tv_signin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password"
        android:textColor="#3B4145"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_username_signin" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin_password">

        <EditText
            android:id="@+id/ad_password_signin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="14sp"
            app:cornerRadius="30dp"/>

        <ImageButton
            android:id="@+id/toggle_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ad_password_signin"
            android:layout_centerVertical="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:paddingTop="10dp"
            android:paddingRight="14dp"
            android:src="@drawable/eye_closed_svgrepo_com" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signup" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#5669FF"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/already_have_an_account"
            app:layout_constraintStart_toEndOf="@+id/already_have_an_account"
            app:layout_constraintTop_toBottomOf="@+id/button_signup" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>