<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_default"
    android:padding="30dp">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@drawable/main_logo_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/yuk_daftarkan_perusahaanmu"
        android:textColor="#3B4145"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/tv_signup_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_hirehub_sign_up"
        android:textColor="#3B4145"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/signup_text"
        app:layout_constraintTop_toBottomOf="@+id/signup_text" />

    <TextView
        android:id="@+id/tv_signup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#3B4145"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_subtitle" />

    <EditText
        android:id="@+id/ad_username_signup"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:textColorHint="#A5A5A5"
        android:paddingRight="16dp"
        android:inputType="text|textNoSuggestions"
        app:cornerRadius="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />

    <TextView
        android:id="@+id/tv_signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password"
        android:textColor="#3B4145"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_username_signup" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password" >
        <EditText
            android:id="@+id/ad_password_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:textSize="14sp"
            android:textColorHint="#A5A5A5"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:cornerRadius="30dp"
            android:layout_marginTop="8dp"
            />
        <ImageButton
            android:id="@+id/toggle_password"
            android:paddingRight="14dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ad_password_signup"
            android:layout_centerVertical="true"
            android:src="@drawable/eye_closed_svgrepo_com"
            android:background="?android:selectableItemBackgroundBorderless"/>

    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <CheckBox
            android:id="@+id/cb_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="24dp"
            android:minHeight="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:checked="false" />

        <TextView
            android:id="@+id/tv_consent_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/consent_register"
            android:textColor="@color/ds_accent_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cb_register"
            app:layout_constraintTop_toTopOf="@+id/cb_register" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/linear_daftar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_consent_register" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_signup" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sign_in"
                android:textColor="#5669FF"
                app:layout_constraintBottom_toBottomOf="@+id/already_have_an_account"
                app:layout_constraintStart_toEndOf="@+id/already_have_an_account"
                app:layout_constraintTop_toBottomOf="@+id/button_signup" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>